Bug #7386 mysql_connection.cc fails to compile on Linux/alpha (Compaq C++)
Submitted: 17 Dec 2004 17:19 Modified: 20 Dec 2004 16:21
Reporter: Lenz Grimmer Email Updates:
Status: Closed Impact on me:
None 
Category:MySQL Server: Compiling Severity:S1 (Critical)
Version:5.0.3-pre OS:Linux (Linux/alpha)
Assigned to: Petr Chardin CPU Architecture:Any

[17 Dec 2004 17:19] Lenz Grimmer
Description:
On Linux/alpha, the compilation of the instance manager fails with the following error:

09853: cxx -DMYSQL_INSTANCE_MANAGER -DMYSQL_SERVER -I. -I. -I../.. -I../../include -I../../extra    -g -O -DSAFE_MUTEX -mieee -fast -arch generic -noexceptions -nortti   -c -o protocol.o protocol.cc
09854: cxx: Info: File not optimized; use -g3 if both optimization and debug wanted.
09855: cxx: Warning: protocol.cc, line 60: integer conversion resulted in a change of
09856:           sign
09857:   *pos++= ERROR_PACKET_CODE;
09858: ----------^
09859: cxx: Warning: protocol.cc, line 81: integer conversion resulted in a change of
09860:           sign
09861:   *pos++= ERROR_PACKET_CODE;
09862: ----------^
09863: cxx: Warning: protocol.cc, line 127: integer conversion resulted in a change of
09864:           sign
09865:   buff[0]=254;
09866: ----------^
09867: cxx: Warning: protocol.cc, line 162: integer conversion resulted in a change of
09868:           sign
09869:     send_buff.buffer[position+6]= FIELD_TYPE_STRING; /* type */
09870: ----------------------------------^
09871: source='mysql_connection.cc' object='mysql_connection.o' libtool=no \
09872: depfile='.deps/mysql_connection.Po' tmpdepfile='.deps/mysql_connection.TPo' \
09873: depmode=none /bin/sh ../../depcomp \
09874: cxx -DMYSQL_INSTANCE_MANAGER -DMYSQL_SERVER -I. -I. -I../.. -I../../include -I../../extra    -g -O -DSAFE_MUTEX -mieee -fast -arch generic -noexceptions -nortti   -c -o mysql_connection.o mysql_connection.cc
09875: cxx: Info: File not optimized; use -g3 if both optimization and debug wanted.
09876: cxx: Error: mysql_connection.cc, line 184: constant value is not known
09877:   char buff[mysqlmanager_version_length + 1 +   // server version, 0-ended
09878: ------------^
09879: cxx: Info: 1 error detected in the compilation of "mysql_connection.cc".
09880: gmake[3]: *** [mysql_connection.o] Error 1
09881: gmake[3]: Leaving directory `/home/mysqldev/ds20/mysql-5.0.3-alpha/server-tools/instance-manager'

How to repeat:
Compile on the above platform, observe the error.
[20 Dec 2004 16:21] Petr Chardin
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.

If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information 
about accessing the source trees is available at
    http://www.mysql.com/doc/en/Installing_source_tree.html

Additional info:

Alpha compiler problem - external constants are not allowed in the array definition.