fix for Bug#7386 - IM fails to compile on alpha with Compaq C++ compiler

server-tools/instance-manager/mysql_connection.cc:
  use enum value instead of extern const in array definition
server-tools/instance-manager/priv.cc:
  added a comment to remind of enum value in mysql_connection.cc